fixes responsiveness on mobile phone for sample view

--- a/app/assets/stylesheets/extend/bootstrap.scss
+++ b/app/assets/stylesheets/extend/bootstrap.scss
@@ -23,3 +23,28 @@
     display: none;
   }
 }
+
+@media (min-width: 1075px) {
+  .col-sm-3-custom {
+    width: 25%;
+    float: left;
+  }
+  .col-sm-9-custom {
+    width: 75%;
+    float: left;
+  }
+}
+
+.col-sm-3-custom {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.col-sm-9-custom {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
